# duskfork

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake-variants.yaml  files.cmake
.github/workflows/: build.yml
include/: angle_utils.h  dusk_pch.hpp  global.h  os_report.h
include/JSystem/: JGeometry.h
include/JSystem/J2DGraph/: J2DAnimation.h  J2DMaterialFactory.h  J2DPane.h  J2DPicture.h  J2DTevs.h  J2DTextBox.h
include/JSystem/J3DGraphAnimator/: J3DAnimation.h  J3DCluster.h  J3DJointTree.h  J3DShapeTable.h  J3DSkinDeform.h
include/JSystem/J3DGraphBase/: J3DDrawBuffer.h  J3DShape.h  J3DShapeMtx.h  J3DStruct.h  J3DSys.h  J3DTevs.h  J3DTexture.h  J3DTransform.h  J3DVertex.h
include/JSystem/J3DGraphLoader/: J3DMaterialFactory.h  J3DModelLoader.h  J3DShapeFactory.h
include/JSystem/J3DU/: J3DUD.h
include/JSystem/JAudio2/: JAISound.h  JASBank.h  JASChannel.h  JASGadget.h  JASHeapCtrl.h  JASOscillator.h  JASWSParser.h  JASWaveInfo.h  JAUAudioArcInterpreter.h  JAUSectionHeap.h
include/JSystem/JGadget/: define.h  search.h
include/JSystem/JHostIO/: JHICommonMem.h  JOREntry.h  JORMContext.h
include/JSystem/JKernel/: JKRAramHeap.h  JKRArchive.h  JKRExpHeap.h  JKRHeap.h
include/JSystem/JMath/: JMath.h
include/JSystem/JMessage/: JMessage.h  data.h
include/JSystem/JParticle/: JPABaseShape.h  JPADynamicsBlock.h  JPAExTexShape.h  JPAFieldBlock.h  JPAResource.h
include/JSystem/JSupport/: JSUOutputStream.h  JSupport.h
include/JSystem/JUtility/: JUTAssert.h  JUTConsole.h  JUTFont.h  JUTGraphFifo.h  JUTNameTab.h  JUTResFont.h  JUTTexture.h
include/SSystem/SComponent/: c_angle.h  c_bg_s_chk.h  c_cc_d.h  c_cc_s.h  c_m3d_g_tri.h  c_math.h  c_xyz.h
include/Z2AudioLib/: Z2DebugSys.h  Z2FxLineMgr.h  Z2Instances.h  Z2StatusMgr.h
include/c/: c_damagereaction.h
include/d/: d_bg_pc.h  d_bg_plc.h  d_bg_s.h  d_bg_w.h  d_bg_w_base.h  d_bg_w_kcol.h  d_bright_check.h  d_camera.h  d_cc_d.h  d_com_inf_game.h  d_cursor_mng.h  d_demo.h  d_drawlist.h  d_event_data.h  d_file_select.h  d_kankyo_rain.h  d_map.h  d_map_path.h  d_map_path_dmap.h  d_map_path_fmap.h  d_menu_collect.h  d_menu_fmap.h  d_menu_fmap2D.h  d_menu_map_common.h  d_menu_save.h  d_meter2_info.h  d_msg_class.h  d_name.h  d_particle.h  d_particle_name.h  d_path.h  d_procname.h  d_s_name.h  d_save.h  d_shop_system.h  d_simple_model.h  d_stage.h  d_tresure.h  dolzel_base.pch
include/d/actor/: d_a_alink.h  d_a_b_ds.h  d_a_formation_mng.h  d_a_movie_player.h  d_a_npc.h  d_a_npc4.h  d_a_npc_aru.h  d_a_npc_besu.h  d_a_npc_bou.h  d_a_npc_cd.h  d_a_npc_chat.h  d_a_npc_clerka.h  d_a_npc_clerkb.h  d_a_npc_fairy.h  d_a_npc_taro.h  d_a_npc_zrz.h  d_a_obj_catdoor.h  d_a_obj_kamakiri.h  d_a_obj_wind_stone.h  d_a_passer_mng.h  d_a_player.h  d_a_spinner.h  d_flower.h  d_grass.h
include/dolphin/: os.h  types.h
include/dolphin/gx/: GXGeometry.h
include/dusk/: app_info.hpp  audio.h  config.hpp  config_var.hpp  dusk.h  dvd_asset.hpp  endian.h  endian_gx.hpp  endian_ssystem.h  extras.h  frame_interpolation.h  game_clock.h  gx_helper.h  gyro.h  hotkeys.h  io.hpp  main.h  map_loader_definitions.h  math.h  offset_ptr.h  scope_guard.hpp  settings.h  string.hpp
include/dusk/audio/: DuskAudioSystem.h
include/f_ap/: f_ap_game.h
include/f_op/: f_op_actor.h  f_op_actor_mng.h  f_op_camera_mng.h  f_op_view.h
include/f_pc/: f_pc_base.h  f_pc_layer_tag.h  f_pc_leaf.h  f_pc_manager.h  f_pc_name.h  f_pc_profile_lst.h
include/m_Do/: m_Do_audio.h  m_Do_controller_pad.h  m_Do_dvd_thread.h  m_Do_ext.h  m_Do_graphic.h  m_Do_lib.h  m_Do_mtx.h  m_Do_printf.h
include/revolution/: types.h
libs/freeverb/: CMakeLists.txt
res/rml/: overlay.rcss  popup.rcss  popup.rml  prelaunch.rcss  tabbing.rcss  window.rcss  window.rml
src/: DynamicLink.cpp
src/JSystem/J2DGraph/: J2DAnimation.cpp  J2DAnmLoader.cpp  J2DMatBlock.cpp  J2DMaterial.cpp  J2DMaterialFactory.cpp  J2DPane.cpp  J2DPicture.cpp  J2DPictureEx.cpp  J2DPrint.cpp  J2DScreen.cpp  J2DTevs.cpp  J2DTextBox.cpp  J2DWindow.cpp  J2DWindowEx.cpp
src/JSystem/J3DGraphAnimator/: J3DAnimation.cpp  (+2 more)
src/Z2AudioCS/: SpkMixingBuffer.cpp  SpkSound.cpp  SpkSystem.cpp  Z2AudioCS.cpp
src/Z2AudioLib/: Z2Audience.cpp  Z2AudioArcLoader.cpp  Z2AudioMgr.cpp  Z2Creature.cpp  Z2DebugSys.cpp  Z2FxLineMgr.cpp  Z2SceneMgr.cpp  Z2SeqMgr.cpp  Z2SoundHandles.cpp  Z2SoundObjMgr.cpp  Z2SoundObject.cpp  Z2WolfHowlMgr.cpp
src/c/: c_damagereaction.cpp  c_dylink.cpp
src/d/: d_attention.cpp  d_bg_parts.cpp  d_bg_s.cpp  d_bg_s_movebg_actor.cpp  d_bg_w.cpp  d_bg_w_kcol.cpp  d_bg_w_sv.cpp  d_bright_check.cpp  d_camera.cpp  d_cc_d.cpp  d_cc_s.cpp  d_com_inf_game.cpp  d_cursor_mng.cpp  d_debug_camera.cpp  d_debug_viewer.cpp  d_demo.cpp  d_drawlist.cpp  d_envse.cpp  d_error_msg.cpp  d_ev_camera.cpp  d_event_data.cpp  d_event_manager.cpp  d_file_sel_info.cpp  d_file_sel_warning.cpp  d_file_select.cpp  d_gameover.cpp  d_home_button.cpp  d_insect.cpp  d_jcam_editor.cpp  d_jnt_col.cpp  d_jpreviewer.cpp  d_k_wmark.cpp  d_k_wpillar.cpp  d_kankyo.cpp  d_kankyo_debug.cpp  d_kankyo_rain.cpp  d_kankyo_wether.cpp  d_kantera_icon_meter.cpp  d_ky_thunder.cpp  d_map.cpp  (+71 more)
src/dusk/: J3DTransforms_C.cpp  OSContext.cpp  OSMutex.cpp  OSThread.cpp  achievements.cpp  asserts.cpp  config.cpp  discord.cpp  dvd_asset.cpp  endian.cpp  extras.c  extras.cpp  frame_interpolation.cpp  game_clock.cpp  globals.cpp  gyro.cpp  imgui.cpp  io.cpp  iso_validate.cpp  iso_validate.hpp  jsystem_stubs.cpp  logging.cpp  m_Do_ext_dusk.cpp  main.cpp  mtx.cpp  offset_ptr.cpp  settings.cpp  stubs.c  stubs.cpp
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor_mng.cpp  f_op_kankyo.cpp  f_op_scene_mng.cpp  f_op_scene_req.cpp
src/f_pc/: f_pc_base.cpp  f_pc_create_req.cpp  f_pc_leaf.cpp  f_pc_profile.cpp  f_pc_profile_lst.cpp  f_pc_stdcreate_req.cpp
src/m_Do/: m_Do_DVDError.cpp  m_Do_MemCard.cpp  m_Do_MemCardRWmng.cpp  m_Do_Reset.cpp  m_Do_audio.cpp  m_Do_controller_pad.cpp  m_Do_dvd_thread.cpp  m_Do_ext.cpp  m_Do_ext2.cpp  m_Do_graphic.cpp  m_Do_lib.cpp  m_Do_machine.cpp  m_Do_main.cpp  m_Do_mtx.cpp  m_Do_printf.cpp
tools/converters/: matDL_dis.py
(+950 files in other folders)
